deps/chakrashim/core/test/LetConst/defer1.baseline
SyntaxError: Let/Const redeclaration
	at code (defer1.js:6:46)
